--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@
     serviceConnectionEndpoint: 'Teste-POC'
     testType: 'app'
     monitorWhen: 'always'
-    failOnIssues: true
+    failOnIssues: false
     projectName: 'Teste'
 # Python package
 # Create and test a Python package on multiple Python versions.
