Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 # Python package
 - task: SnykSecurityScan@1
   inputs:
-    serviceConnectionEndpoint: 'Teste-POC'
+    serviceConnectionEndpoint: 'TestePOC'
     testType: 'app'
     monitorWhen: 'always'
     failOnIssues: true
