--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,4 @@
 # Python package
-  task: SnykSecurityScan@1
-  inputs:
-    serviceConnectionEndpoint: 'TestePOC'
-    testType: 'app'
-    monitorWhen: 'always'
-    failOnIssues: true
 # Create and test a Python package on multiple Python versions.
 # Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
@@ -42,3 +36,10 @@ steps:
     pip install pytest pytest-azurepipelines
     pytest
   displayName: 'pytest'
+
+- task: SnykSecurityScan@1
+  inputs:
+    serviceConnectionEndpoint: 'TestePOC'
+    testType: 'app'
+    monitorWhen: 'always'
+    failOnIssues: true
