Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ steps:
 
 - task: SnykSecurityScan@1
   inputs:
-    serviceConnectionEndpoint: 'TestePOC'
+    serviceConnectionEndpoint: 'Teste-POC'
     testType: 'app'
     monitorWhen: 'always'
     failOnIssues: true
