--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
     versionSpec: '$(python.version)'
   displayName: 'Use Python $(python.version)'
 
-- scpt: |
+- script: |
     python -m pip install --upgrade pip
     pip install -r requirements.txt
   displayName: 'Install dependencies'
@@ -35,9 +35,3 @@ steps:
     pytest
   displayName: 'pytest'
 
-- task: SnykSecurityScan@1
-  inputs:
-    serviceConnectionEndpoint: 'Teste-POC'
-    testType: 'app'
-    monitorWhen: 'always'
-    failOnIssues: true
